--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
           </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
       </div><!-- /.modal -->
+  <div class="fb-page" 
+  data-href="https://www.facebook.com/SkilledImmigrantsinAmerica"
+  data-width="380" 
+  data-hide-cover="false"
+  data-show-facepile="false"></div>
 
  <iframe name="print_iframe" id="print_iframe" src="about:blank"></iframe>
       <!-- Optional JavaScript -->
