--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
             <div class="col-md-4 text-center">
               <button type="button" id="generate_button" class="btn btn-primary" >Lookup<span class="glyphicon glyphicon-send"></span></button>
             </div>
+              <div class="fb-page"data-href="https://www.facebook.com/SkilledImmigrantsinAmerica" data-width="380" data-hide-cover="false" data-show-facepile="false"></div>
+
           </div>
         </div>
         </div><!-- /.container -->
@@ -203,11 +205,6 @@
           </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
       </div><!-- /.modal -->
-  <div class="fb-page" 
-  data-href="https://www.facebook.com/SkilledImmigrantsinAmerica"
-  data-width="380" 
-  data-hide-cover="false"
-  data-show-facepile="false"></div>
 
  <iframe name="print_iframe" id="print_iframe" src="about:blank"></iframe>
       <!-- Optional JavaScript -->
