--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="https://nehaverma90.github.io/siia/css.css">
   </head>
   <body>
+    <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     <!-- Template credits: https://codepen.io/jaycbrf/pen/iBszr/, https://colorlib.com/wp/free-html5-contact-form-templates/ -->
     <form>
       <div class="container">
@@ -205,7 +213,7 @@
           </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
       </div><!-- /.modal -->
-
+<div class="fb-page" data-href="https://www.facebook.com/SkilledImmigrantsinAmerica" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/SkilledImmigrantsinAmerica" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/SkilledImmigrantsinAmerica">Skilled Immigrants In America</a></blockquote></div>
  <iframe name="print_iframe" id="print_iframe" src="about:blank"></iframe>
       <!-- Optional JavaScript -->
       <script   src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
