--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
         </div><!-- /.modal-dialog -->
       </div><!-- /.modal -->
 <div class="fb-page" data-href="https://www.facebook.com/SkilledImmigrantsinAmerica" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/SkilledImmigrantsinAmerica" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/SkilledImmigrantsinAmerica">Skilled Immigrants In America</a></blockquote></div>
- <iframe name="print_iframe" id="print_iframe" src="about:blank"></iframe>
+<a class="twitter-timeline" href="https://twitter.com/SIIA_US?ref_src=twsrc%5Etfw">Tweets by SIIA_US</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <iframe name="print_iframe" id="print_iframe" src="about:blank"></iframe>
       <!-- Optional JavaScript -->
       <script   src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
 
