--- a/index.html
+++ b/index.html
@@ -215,12 +215,13 @@
       </div><!-- /.modal -->
   
 <div class="fb-page" data-href="https://www.facebook.com/SkilledImmigrantsinAmerica" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/SkilledImmigrantsinAmerica" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/SkilledImmigrantsinAmerica">Skilled Immigrants In America</a></blockquote></div>
-<div><a class="twitter-timeline" href="https://twitter.com/SIIA_US?ref_src=twsrc%5Etfw">Tweets by SIIA_US</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+<div><a class="twitter-timeline" href="https://twitter.com/SIIA_US?ref_src=twsrc%5Etfw" data-width="300" data-height="300">Tweets by SIIA_US</a></div>
   <iframe name="print_iframe" id="print_iframe" src="about:blank"></iframe>
       <!-- Optional JavaScript -->
-      <script   src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
+      <script   src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
 
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
       <script src="https://nehaverma90.github.io/siia/js.js"></script>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </body>
   </html>
