--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       </div><!-- /.modal -->
   <div>
 <div class="fb-page" data-href="https://www.facebook.com/SkilledImmigrantsinAmerica" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/SkilledImmigrantsinAmerica" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/SkilledImmigrantsinAmerica">Skilled Immigrants In America</a></blockquote></div>
-<div><a class="twitter-timeline" href="https://twitter.com/SIIA_US?ref_src=twsrc%5Etfw" data-width="300" data-height="300">Tweets by SIIA_US</a></div>
+<a class="twitter-timeline" href="https://twitter.com/SIIA_US?ref_src=twsrc%5Etfw" data-width="300" data-height="300">Tweets by SIIA_US</a>
   </div>
     <iframe name="print_iframe" id="print_iframe" src="about:blank"></iframe>
       <!-- Optional JavaScript -->
