--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
   js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+    
+    
+  <div id="Home" class="tabcontent">
+  <h3>Home</h3>
+  <p>London is the capital city of England.</p>
+</div>
+
+<div id="About Us" class="tabcontent">
+  <h3>About Us</h3>
+  <p>Paris is the capital of France.</p> 
+</div>
     <!-- Template credits: https://codepen.io/jaycbrf/pen/iBszr/, https://colorlib.com/wp/free-html5-contact-form-templates/ -->
     <form>
       <div class="container">
